--- a/app/src/main/res/layout/activity_groupmanagement.xml
+++ b/app/src/main/res/layout/activity_groupmanagement.xml
@@ -24,7 +24,7 @@
             android:id="@+id/manageMentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:text="@string/group_management"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/button_click_effect"
         android:gravity="left"
-        android:text="@string/group_management_registertodo_button"
+        android:text="@string/group_management_modify_button"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/button_click_effect"
         android:gravity="left"
-        android:text="@string/group_management_modify_button"
+        android:text="@string/group_management_apply_button"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:text="@string/group_management_delete_button"
+        android:text="@string/group_management_admin"
         android:textSize="20dp"
         android:textColor="@color/black"
         android:background="@drawable/button_click_effect"
@@ -112,7 +112,7 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/group_management_admin"
+        android:text="@string/group_management_delete_button"
         android:textSize="20dp"
         android:textColor="@color/black"
         android:gravity="left"
