refact(#37) : UI 수정 및 개선

--- a/app/src/main/res/layout/activity_nongroup_study_search.xml
+++ b/app/src/main/res/layout/activity_nongroup_study_search.xml
@@ -72,15 +72,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/study_search_bottom_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:background="@color/colorGray"
-        app:itemIconTint="#000000"
-        app:itemTextColor="@color/black"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/study_search_menu_bottom_navigation_view" />
+        app:menu="@menu/bottom_navigation_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
