--- a/app/src/main/res/layout/activity_nongroup_studysearch_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_nongroup_studysearch_recyclerview_item.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="135dp"
-    android:layout_height="220dp"
+    android:layout_height="250dp"
     android:layout_gravity="center"
     android:layout_marginBottom="30dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="30dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +35,8 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/studySearchStudyTitle"
+                android:autoSizeMaxTextSize="1dp"
+                android:ellipsize="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -53,9 +55,8 @@
                 android:id="@+id/studySearchStudyLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
                 android:text="서울"
                 android:textColor="@color/black"
                 android:textSize="10dp"
@@ -71,7 +72,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="20dp"
-                android:text="모집인원"
+                android:text="현재인원"
                 android:textSize="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/studySearchStudyTitle">
