--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -132,4 +132,16 @@
         app:layout_constraintTop_toBottomOf="@+id/userApplyStudyRecyclerView">
 
     </com.google.android.material.textview.MaterialTextView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/userBottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorGray"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_view"></com.google.android.material.bottomnavigation.BottomNavigationView>
 </androidx.constraintlayout.widget.ConstraintLayout>
