--- a/app/src/main/res/menu/menu_group_leave.xml
+++ b/app/src/main/res/menu/menu_group_leave.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/appbarMemo"
+        android:id="@+id/leaveGroup"
         android:title="@string/group_member_detailscreen_leave"
         app:showAsAction="always"/>
 </menu>
