--- a/app/src/main/res/layout/activity_groupleader_managementgroupmember_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_groupleader_managementgroupmember_recyclerview_item.xml
@@ -14,6 +14,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:id="@+id/memberOut"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:icon="@drawable/close"
+                app:iconGravity="textStart"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </com.google.android.material.button.MaterialButton>
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/groupLeaderManagementGroupMemberImageView"
                 android:layout_width="64dp"
@@ -73,6 +87,21 @@
 
             </com.google.android.material.textview.MaterialTextView>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/upgradeManager"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="62dp"
+                android:layout_height="31dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="4dp"
+                android:text="운영진 등록"
+                android:textColor="@color/black"
+                android:textSize="8dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+            </com.google.android.material.button.MaterialButton>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
