--- a/app/src/main/res/layout/activity_groupmanagement.xml
+++ b/app/src/main/res/layout/activity_groupmanagement.xml
@@ -7,7 +7,7 @@
 
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/manageMentToolbar"
+        android:id="@+id/managementToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_marginStart="8dp"
@@ -21,7 +21,7 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <TextView
-            android:id="@+id/manageMentTitle"
+            android:id="@+id/managementTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -34,25 +34,7 @@
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:id="@+id/manageMentRegisterToDo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/button_click_effect"
-        android:gravity="left"
-        android:text="@string/group_management_modify_button"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/manageMentToolbar" />
-
-    <com.google.android.material.button.MaterialButton
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:id="@+id/manageMentModifyGroup"
+        android:id="@+id/managementCollectGroupMember"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -67,7 +49,7 @@
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/manageMentRegisterToDo" />
+        app:layout_constraintTop_toBottomOf="@+id/managementToolbar" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -86,11 +68,11 @@
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/manageMentModifyGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/managementCollectGroupMember" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:id="@+id/managementDeleteGroup"
+        android:id="@+id/managementGroupMember"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
@@ -108,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/manageCurrentApply" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/managementAdmin"
+        android:id="@+id/managementDeleteGroup"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -124,7 +106,7 @@
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/managementDeleteGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/managementGroupMember" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
