--- a/app/src/main/res/layout/activity_groupmanagement_createstudy.xml
+++ b/app/src/main/res/layout/activity_groupmanagement_createstudy.xml
@@ -170,16 +170,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
         android:hint="내용"
         android:textColor="@color/black"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/groupLeaderCreateStudyDescriptionView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/groupLeaderCreateStudyDescriptionView">
-    </com.google.android.material.textfield.TextInputEditText>
+        app:layout_constraintStart_toEndOf="@+id/groupLeaderCreateStudyDescriptionView"></com.google.android.material.textfield.TextInputEditText>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
