--- a/app/src/main/res/layout/activity_user_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_user_recyclerview_item.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginRight="30dp"
+    android:layout_marginRight="16dp"
     android:layout_width="168dp"
     android:layout_height="148dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/colorGray"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
