--- a/app/src/main/res/layout/activity_nongroup_study_search.xml
+++ b/app/src/main/res/layout/activity_nongroup_study_search.xml
@@ -17,7 +17,7 @@
 
     </com.google.android.material.appbar.MaterialToolbar>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
         android:id="@+id/editTextTextPersonName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -36,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/studySearchToolBar" />
+        app:layout_constraintTop_toBottomOf="@+id/studySearchToolBar">
+    </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/studySearchRecommendList"
