--- a/app/src/main/res/layout/activity_nongroup_studysearch_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_nongroup_studysearch_recyclerview_item.xml
@@ -59,7 +59,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="서울"
                 android:textColor="@color/black"
-                android:textSize="10dp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/studySearchImage">
 
