--- a/app/src/main/res/layout/activity_user_recyclerview_item.xml
+++ b/app/src/main/res/layout/activity_user_recyclerview_item.xml
@@ -57,6 +57,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userRecyclerViewStudyDate" />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/userRecyclerViewStudyId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
