feat(#43) : 그룹리더 그룹원 관리페이지 retrofit

--- a/app/src/main/res/layout/activity_groupleader_managementgroupmember.xml
+++ b/app/src/main/res/layout/activity_groupleader_managementgroupmember.xml
@@ -63,11 +63,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/groupLeaderCreateStudyMemberRecyclerView"
         android:layout_width="353dp"
-        android:layout_height="535dp"
+        android:layout_height="480dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
